src/App.css
.App {
  text-align: center;
}

.Highlighting {
  background-color: #d53369;
  color: white;
  font-weight: 700;
  border-radius: 2px;
  padding: 2px;
}

.Name-text {
  color: #153366;
}

.Main-container {
  margin-top: 50px;
  margin-bottom: 50px;
}

@media only screen and (max-width: 600px) {

  .Card {
    border-radius: 15px;
    background-color: white;
    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
    padding-top: 3px;
    padding-bottom: 5px;
    padding-left: 10px;
    padding-right: 10px;
  }

  .Emoji-text {
    font-size: 2.1em;
  }

  .Main-header {
    font-size: 1.8em;
    font-weight: 700;
    margin-top: 50px;
    color: #153366;
  }

  .Input-bar {
    margin-top: 30px;
    width: 85%;
    padding: 30px;
    font-size: 1.15em;
    color: #153366;
    border-radius: 15px;
    border-width: 0px;
    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
  }

}

@media only screen and (min-width: 601px) {

  .Card {
    border-radius: 15px;
    background-color: white;
    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
    padding-top: 5px;
    padding-bottom: 10px;
    padding-left: 20px;
    padding-right: 20px;
  }

  .Emoji-text {
    font-size: 3.1em;
  }

  .Main-header {
      font-size: 2.8em;
      font-weight: 700;
      margin-top: 50px;
      color: #153366;
    }

  .Input-bar {
    margin-top: 30px;
    width: 55%;
    padding: 30px;
    font-size: 1.35em;
    color: #153366;
    border-radius: 15px;
    border-width: 0px;
    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
  }

  .Input-bar:hover {
    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
  }

}

input[type="text"], textarea, select { 
    outline: none;
}

